<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".features.productsByCategory.ui.FilterForProductsByCategory">

    <ImageButton
        android:id="@+id/closeFilter"
        style="@style/Widget.App.IconButton.CloseFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:contentDescription="@string/cd_close_filter"
        app:layout_constraintBottom_toBottomOf="@+id/tvFilterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvFilterTitle" />
    <TextView
        android:id="@+id/tvFilterTitle"
        style="@style/TextAppearance.AppCompat.PageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        app:layout_constraintBottom_toTopOf="@id/filterPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_marginTop="20dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/bg_filter_panel"
        android:paddingHorizontal="22dp"
        android:paddingTop="27dp"
        android:paddingBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFilterTitle">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:fillViewport="false"
            app:layout_constraintBottom_toTopOf="@id/btnApply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/filterOptionsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.SectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"
                    android:textSize="22sp" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandFreshfield"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:layout_marginTop="18dp"
                    android:text="@string/brand_freshfield" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandOrchardLane"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_orchard_lane" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandMeadowDairy"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_meadow_dairy" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandSunnyHen"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_sunny_hen" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandClearspring"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_clearspring" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandNorthRoast"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_north_roast" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandGoldenHarvest"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_golden_harvest" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandPurepress"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_purepress" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandFarmstead"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_farmstead" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandHarborCatch"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_harbor_catch" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandBakerStreet"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_baker_street" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbBrandCrunchClub"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/brand_crunch_club" />

                <TextView
                    style="@style/TextAppearance.SectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/price"
                    android:textSize="22sp" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbPriceLowToHigh"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:layout_marginTop="18dp"
                    android:text="@string/price_low_to_high" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbPriceHighToLow"
                    style="@style/Widget.App.Filter.CheckBox"
                    android:text="@string/price_high_to_low" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            style="@style/Widget.App.Button.Confirm"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginHorizontal="1dp"
            android:text="@string/apply_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
